--- a/src/App.css
+++ b/src/App.css
@@ -259,6 +259,9 @@ td {
 .DeathKnight{
     background-color: #C41F3B;  
 }
+.Evoker{
+    background-color: #33937F;
+}
 
 .file-submit {
     margin-left: 5rem;
